Fix <li>
Previously, it was too big on konqueror and firefox

--- a/media/style/ramblingsoul3.css
+++ b/media/style/ramblingsoul3.css
@@ -2,11 +2,12 @@ body {
 	margin:0px;
 	padding:0px;
 	font-family:verdana, arial, helvetica, sans-serif;
+    font-size: 12px;
 	color:#333;
 	background-color:white;
 	background-image: url(/media/images/ramblingsoul3/headerbg.png);
 	background-repeat: repeat-x;
-	}
+}
 h1 {
 	padding:0px;
 	font-size:24px;
@@ -52,8 +53,14 @@ p {
 	font-family: verdana, arial, helvetica, sans-serif;
 	font-size: 12px;
 	line-height: 25px;
-	color: #000000;
-	}
+	color:black;
+}
+li {
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 12px;
+	line-height: 25px;
+	color: black;
+}
 #content>p {
     margin:0px;
 }
@@ -271,7 +278,7 @@ body>#menu {width:210px;}
 }
 
 
-    #tabs li {
+#tabs li {
 	display:block;
 	margin-bottom: 0;
 	float: left;
@@ -282,7 +289,8 @@ body>#menu {width:210px;}
 	padding-top: 10px;
 	margin-right: 5px;
 	margin-left: 5px;
-      }
+}
+
 #header #tabs li a {
 	padding-right: 5px;
 	padding-left: 5px;
@@ -362,6 +370,7 @@ body>#menu {width:210px;}
 	padding: 0px;
 	list-style-type: none;
 }
+
 li.submenu-item {
 	display: block;
 	margin-top: 0px;
